--- a/src/css/login/login.css
+++ b/src/css/login/login.css
@@ -2,8 +2,14 @@
     width: 15%;
     margin: auto;
     font-size: 18px;
+    padding: 25px;
+    border-radius: 1em;
+    background: rgba( 5, 56, 107, 0.55 );
+    box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14), 0px 1px 5px 0px rgba(0,0,0,0.12);
+    border-radius: 10px;
 }
 
 .logInContainer h2 {
     text-align: center;
+    margin: 0 0 25px 0;
 }
