--- a/src/css/login/login.css
+++ b/src/css/login/login.css
@@ -1,15 +1,28 @@
 .logInContainer {
-    width: 15%;
-    margin: auto;
+    width: 20%;
     font-size: 18px;
     padding: 25px;
-    border-radius: 1em;
-    background: rgba( 5, 56, 107, 0.55 );
+    background: #EDF5E1;
     box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14), 0px 1px 5px 0px rgba(0,0,0,0.12);
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 35vh;
+    box-sizing: border-box;
 }
 
 .logInContainer h2 {
     text-align: center;
-    margin: 0 0 25px 0;
+    margin: 0;
+    color: #05386B;
+}
+
+.logInContainer .inputContainer {
+    background-color: #EDF5E1;
+    margin: 20px 0;
+}
+
+.logInContainer input {
+    background-color: #EDF5E1;
 }
