--- a/src/css/reusableInput/input.css
+++ b/src/css/reusableInput/input.css
@@ -2,11 +2,12 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    background-color: #e6e6e6;
-    border: 2px solid #282c34;
+    background-color: #379683;
+    border: 1px solid #282c34;
     padding: 2px 5px;
     border-radius: 0.25em;
     box-sizing: border-box;
+    color: #05386B;
 }
 
 .inputContainer:focus-within {
@@ -19,7 +20,7 @@
 }
 
 .inputContainer input {
-    background-color: #e6e6e6;
+    background-color: #379683;
     border: none;
     font-size: 20px;
 }
