--- a/src/css/login/login.css
+++ b/src/css/login/login.css
@@ -10,19 +10,29 @@
     justify-content: space-evenly;
     height: 35vh;
     box-sizing: border-box;
+    align-items: center;
 }
 
 .logInContainer h2 {
-    text-align: center;
     margin: 0;
     color: #05386B;
 }
 
+.logInForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .logInContainer .inputContainer {
     background-color: #EDF5E1;
-    margin: 20px 0;
+    margin: 10px 0;
 }
 
 .logInContainer input {
     background-color: #EDF5E1;
+}
+
+.logInContainer button {
+    margin-top: 15px;
 }
