--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,7 @@
   background-color: #FF8A6B;
   font-weight: bold;
   border: none;
+  box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14), 0px 1px 5px 0px rgba(0,0,0,0.12);
 }
 
 .App-Button:focus {
@@ -53,4 +54,12 @@
 
 .App-Button:active {
   background-color: #a75a45;
+}
+
+.App-Container {
+  color: #EDF5E1;
+  background: #EDF5E1;
+  box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14), 0px 1px 5px 0px rgba(0,0,0,0.12);
+  border-radius: 10px;
+  box-sizing: border-box;
 }
