--- a/src/css/login/login.css
+++ b/src/css/login/login.css
@@ -2,14 +2,10 @@
     width: 20%;
     font-size: 18px;
     padding: 25px;
-    background: #EDF5E1;
-    box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14), 0px 1px 5px 0px rgba(0,0,0,0.12);
-    border-radius: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     height: 35vh;
-    box-sizing: border-box;
     align-items: center;
 }
 
@@ -22,6 +18,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    box-shadow: none;
 }
 
 .logInContainer .inputContainer {
