--- a/src/css/reusableInput/input.css
+++ b/src/css/reusableInput/input.css
@@ -2,7 +2,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    background-color: #379683;
+    background-color: #EDF5E1;
     border: 1px solid #282c34;
     padding: 2px 5px;
     border-radius: 0.25em;
@@ -20,7 +20,7 @@
 }
 
 .inputContainer input {
-    background-color: #379683;
+    background-color: #EDF5E1;
     border: none;
     font-size: 20px;
 }
