--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@
 }
 
 .App-Container {
-  color: #EDF5E1;
+  color: #282c34;
   background: #EDF5E1;
   box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14), 0px 1px 5px 0px rgba(0,0,0,0.12);
   border-radius: 10px;
