--- a/src/css/header/header.css
+++ b/src/css/header/header.css
@@ -1,3 +1,36 @@
+.App-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    box-sizing: border-box;
+    padding-right: 32px;
+}
+
 .App-hl h1 {
     font-size: 2.5em;
+}
+
+.logOutButton {
+    border: none;
+    padding: 0;
+}
+
+.logInHandler, .logOutButton {
+    font-size: 1.5em;
+    text-decoration: none;
+    font-weight: bold;
+    color: #125a4c;
+    background-color: transparent;
+    border-bottom: 2px solid #5CDB95;
+    transition: 0.3s ease-in-out;
+}
+
+.logInHandler:hover, .logOutButton:hover {
+    color: #379683;
+    border-color: #fff;
+    cursor: pointer;
+}
+
+.logOutButton:active {
+    outline: none;
 }
