--- a/src/css/login/login.css
+++ b/src/css/login/login.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    height: 35vh;
+    height: 45vh;
     align-items: center;
 }
 
@@ -18,14 +18,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     box-shadow: none;
+    height: 55%;
 }
-
-.logInContainer .inputContainer {
-    margin: 10px 0;
-}
-
 
 .logInContainer button {
     margin-top: 5px;
+}
+
+.logInContainer a {
+    margin: 0;
 }
